fix weird layout bug

--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,10 @@ div#app {
 }
 
 div#editor-part {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  overflow: hidden;
 }
 
 div#editor-top-bar {
@@ -53,4 +55,9 @@ iframe#preview {
   width: 100%;
   height: 100%;
   border: none;
+}
+/* See https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size */
+
+div.flex > * {
+  min-height: 0;
 }
